test/spec_vectors/unreached-invalid/fail/module_29.wat
(module (func $type-loop-value-num-vs-void-after-return (block (loop (return) (i32.const 1)))))